--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -14,7 +14,42 @@
     }
    ],
    "source": [
+    "#引數值的呼叫,省略了default值\n",
     "print(1,'a',0.1,4,'c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-a-0.1-4-c.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,'a',0.1,4,'c',sep='-',end='.\\n')"
    ]
   }
  ],
