--- a/lesson9/lesson9_1.ipynb
+++ b/lesson9/lesson9_1.ipynb
@@ -199,6 +199,27 @@
    "source": [
     "codes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set1 = {1,2,3,1,2,3,4,5,6}\n",
+    "set1"
+   ]
   }
  ],
  "metadata": {
