--- a/lesson9/lesson9_2.ipynb
+++ b/lesson9/lesson9_2.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import redis"
+    "import redis\n",
+    "redis_conn = redis.Redis.from_url('rediss://red-clm0u4pfb9qs73966ia0:z8GgAGuZPDFfDdkxkrWjFyqfptcwu8@singapore-redis.render.com:6379')"
    ]
   }
  ],
