--- a/lesson9/lesson9_2.ipynb
+++ b/lesson9/lesson9_2.ipynb
@@ -9,6 +9,26 @@
     "import redis\n",
     "redis_conn = redis.Redis.from_url('rediss://red-clm0u4pfb9qs73966ia0:z8GgAGuZPDFfDdkxkrWjFyqfptcwu8@singapore-redis.render.com:6379')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.set('full_name',\"徐國堂\")"
+   ]
   }
  ],
  "metadata": {
