--- a/lesson9/lesson9_2.ipynb
+++ b/lesson9/lesson9_2.ipynb
@@ -27,7 +27,28 @@
     }
    ],
    "source": [
+    "#儲存key,Strings\n",
     "redis_conn.set('full_name',\"徐國堂\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'徐國堂'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.get('full_name').decode()"
    ]
   }
  ],
