--- a/lesson10/lesson10_1.ipynb
+++ b/lesson10/lesson10_1.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import redis\n",
-    "redis_conn = redis.Redis.from_url('rediss://red-clm0u4pfb9qs73966ia0:z8GgAGuZPDFfDdkxkrWjFyqfptcwu8gO@singapore-redis.render.com:6379')"
+    "redis_conn = redis.Redis.from_url('rediss://red-clm0u4pfb9qs73966ia0:z8GgAGuZPDFfDdkxkrWjFyqfptcwu@singapore-redis.render.com:6379')"
    ]
   },
   {
@@ -60,6 +60,37 @@
     "print(redis_conn.get('english').decode())\n",
     "print(redis_conn.get('math').decode())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#刪除key\n",
+    "redis_conn.delete('name')\n",
+    "redis_conn.delete('chinese')\n",
+    "redis_conn.delete('english')\n",
+    "redis_conn.delete('math')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
