--- a/lesson10/lesson10_2.ipynb
+++ b/lesson10/lesson10_2.ipynb
@@ -12,11 +12,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#儲存list"
+    "#儲存list\n",
+    "name = \"徐國堂\"\n",
+    "chinese = 78\n",
+    "english = 92\n",
+    "math = 65\n",
+    "\n",
+    "redis_conn.rpush('stu:01',name)\n",
+    "redis_conn.rpush('stu:01',chinese)\n",
+    "redis_conn.rpush('stu:01',english)\n",
+    "redis_conn.rpush('stu:01',math)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name2 = \"張xx\"\n",
+    "chinese2 = 90\n",
+    "english2 = 98\n",
+    "math2 = 91\n",
+    "\n",
+    "redis_conn.rpush('stu:02',name2,chinese2,english2,math2)\n"
    ]
   }
  ],
