--- a/lesson10/lesson10_2.ipynb
+++ b/lesson10/lesson10_2.ipynb
@@ -63,6 +63,29 @@
     "\n",
     "redis_conn.rpush('stu:02',name2,chinese2,english2,math2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "張xx\n",
+      "90\n",
+      "98\n",
+      "91\n"
+     ]
+    }
+   ],
+   "source": [
+    "#取出list的值\n",
+    "list1 = redis_conn.lrange('stu:02',0,-1)\n",
+    "for item in list1:\n",
+    "    print(item.decode())"
+   ]
   }
  ],
  "metadata": {
