--- a/lesson10/lesson10_2.ipynb
+++ b/lesson10/lesson10_2.ipynb
@@ -86,6 +86,85 @@
     "for item in list1:\n",
     "    print(item.decode())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[b'35768.0',\n",
+       " b'35880.0',\n",
+       " b'13283.0',\n",
+       " b'36168.0',\n",
+       " b'37097.0',\n",
+       " b'38617.0',\n",
+       " b'36840.0',\n",
+       " b'37833.0',\n",
+       " b'37769.0',\n",
+       " b'38569.0']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.lrange('pico_light',0,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[b'37641.0',\n",
+       " b'37641.0',\n",
+       " b'37481.0',\n",
+       " b'35192.0',\n",
+       " b'37145.0',\n",
+       " b'37513.0',\n",
+       " b'35512.0',\n",
+       " b'38057.0',\n",
+       " b'45600',\n",
+       " b'35600']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.lrange('pico_light',-10,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.delete('stu:01')\n",
+    "redis_conn.delete('stu:02')"
+   ]
   }
  ],
  "metadata": {
