--- a/lesson10/lesson10_2.ipynb
+++ b/lesson10/lesson10_2.ipynb
@@ -12,6 +12,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"徐國堂\"\n",
+    "chinese = 78\n",
+    "english = 92\n",
+    "math = 65"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -165,6 +177,13 @@
     "redis_conn.delete('stu:01')\n",
     "redis_conn.delete('stu:02')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
