--- a/lesson10/lesson10_3.ipynb
+++ b/lesson10/lesson10_3.ipynb
@@ -12,28 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"徐國堂\"\n",
     "chinese = 78\n",
-    "english = 92\n",
+    "english = 100\n",
     "math = 65"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,6 +46,48 @@
     "                    '英文':english,\n",
     "                    '數學':math\n",
     "                })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'徐國堂'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.hget('stu:01','姓名').decode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "姓名 徐國堂\n",
+      "中文 78\n",
+      "英文 100\n",
+      "數學 65\n"
+     ]
+    }
+   ],
+   "source": [
+    "stu1 = redis_conn.hgetall('stu:01')\n",
+    "for (key,value) in stu1.items():\n",
+    "    print(key.decode(), value.decode())"
    ]
   }
  ],
