--- a/lesson10/lesson10_3.ipynb
+++ b/lesson10/lesson10_3.ipynb
@@ -89,6 +89,26 @@
     "for (key,value) in stu1.items():\n",
     "    print(key.decode(), value.decode())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'姓名': '徐國堂', '中文': '78', '英文': '100', '數學': '65'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{key.decode():value.decode() for (key,value) in stu1.items()}"
+   ]
   }
  ],
  "metadata": {
