--- a/lesson10/lesson10_3.ipynb
+++ b/lesson10/lesson10_3.ipynb
@@ -109,6 +109,26 @@
    "source": [
     "{key.decode():value.decode() for (key,value) in stu1.items()}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.delete('stu:01')"
+   ]
   }
  ],
  "metadata": {
