--- a/lesson10/lesson10_4.ipynb
+++ b/lesson10/lesson10_4.ipynb
@@ -100,6 +100,53 @@
     "redis_conn.hset('classA:english',mapping={id:english})\n",
     "redis_conn.hset('classA:math',mapping={id:math})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['stu02', 'stu03']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_list = [item.decode() for item in redis_conn.lrange('classA:stu',-2,-1)]\n",
+    "id_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "張xx 100 67 89\n",
+      "=============\n",
+      "李xx 56 100 97\n",
+      "=============\n"
+     ]
+    }
+   ],
+   "source": [
+    "for id in id_list:\n",
+    "    name = redis_conn.hget('classA:name',id).decode()\n",
+    "    chinese = redis_conn.hget('classA:chinese',id).decode()\n",
+    "    english = redis_conn.hget('classA:english',id).decode()\n",
+    "    math = redis_conn.hget('classA:math',id).decode()\n",
+    "    print(name,chinese,english,math)\n",
+    "    print(\"=============\")"
+   ]
   }
  ],
  "metadata": {
