--- a/openAPI/lesson12.ipynb
+++ b/openAPI/lesson12.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import redis\n",
+    "import os\n",
     "from dotenv import load_dotenv\n",
-    "redis_conn = redis.Redis.from_url('rediss://red-clm0u4pfb9qs73966ia0:z8GgAGuZPDFfDdkxkrWjFyqfptc@singapore-redis.render.com:6379')"
+    "load_dotenv()\n",
+    "redis_conn = redis.Redis.from_url(os.environ.get('REDIS_HOST_PASSWORD'))"
    ]
   }
  ],
