--- a/UI/lesson12_1.ipynb
+++ b/UI/lesson12_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,14 @@
      "output_type": "stream",
      "text": [
       "下載成功\n",
-      "[{'date': '2024-1-24 16:22:3', 'address': 'chicken_KFC', 'temperature': 25.17182, 'light': 46939.0}, {'date': '2024-1-24 16:39:14', 'address': 'chicken_KFC', 'temperature': 24.23554, 'light': 44122.0}, {'date': '2024-1-24 16:41:23', 'address': 'chicken_KFC', 'temperature': 27.0444, 'light': 42346.0}, {'date': '2024-1-24 16:41:43', 'address': 'chicken_KFC', 'temperature': 27.0444, 'light': 45371.0}, {'date': '2024-1-24 16:42:21', 'address': 'chicken_KFC', 'temperature': 27.0444, 'light': 42250.0}]\n"
+      "[{'date': '2024-1-24 16:41:23', 'address': 'chicken_KFC', 'temperature': 27.0444, 'light': 42346.0}, {'date': '2024-1-24 16:41:43', 'address': 'chicken_KFC', 'temperature': 27.0444, 'light': 45371.0}, {'date': '2024-1-24 16:42:21', 'address': 'chicken_KFC', 'temperature': 27.0444, 'light': 42250.0}]\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "url = 'https://openapi-test-6vnu.onrender.com/pico_w/?count=5'\n",
+    "url = 'https://openapi-test-6vnu.onrender.com/pico_w/?count=3'\n",
     "\n",
     "r = requests.get(url=url)\n",
     "\n",
@@ -27,6 +27,82 @@
     "\n",
     "print(data)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>address</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>light</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-1-24 16:41:23</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>27.0444</td>\n",
+       "      <td>42346.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-1-24 16:41:43</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>27.0444</td>\n",
+       "      <td>45371.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-1-24 16:42:21</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>27.0444</td>\n",
+       "      <td>42250.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date      address  temperature    light\n",
+       "0  2024-1-24 16:41:23  chicken_KFC      27.0444  42346.0\n",
+       "1  2024-1-24 16:41:43  chicken_KFC      27.0444  45371.0\n",
+       "2  2024-1-24 16:42:21  chicken_KFC      27.0444  42250.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.DataFrame(data)"
    ]
   }
  ],
